added index html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>title is new-repo</title>
   </head>
   <body>
-
+      <h1>live and let live</h1>
+      <h2>live and let live</h2>
+      <h3>live and let live</h3>
+      <h4>live and let live</h4>
+      <h5>live and let live</h5>
+      <h6>live and let live</h6>
   </body>
 </html>
